2009-12-10  DJ Delorie  <dj@redhat.com>

	* baseboards/rx-sim.exp: New baseboard.

2009-10-15  Ben Elliston  <bje@gnu.org>

	* MAINTAINERS: Remove refererence to Tom Tromey's Tcl style guide.
	This web page has disappeared.

2009-07-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml, doc/ref.xml, doc/user.xml: Mark up options with
	<option> not <emphasis>.  Apply other grammatical fixes from
	Reuben Thomas.
	* doc/dejagnu.texi: Regenerate.

2009-07-06  Ben Elliston  <bje@gnu.org>

	* configure.ac: Check for docbook2x-texi.
	* configure: Regenerate.

2009-07-06  Ben Elliston  <bje@gnu.org>

	From Reuben Thomas  <rrt@sc3d.org>:
	* doc/runtest.1: Fix some formatting issues.

2009-06-16  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2009-06-16  Ben Elliston  <bje@gnu.org>

	* Makefile.am (rpm, deb, solpkg, hpdepot): Remove targets.
	* Makefile.in: Regenerate.
	* packaging: Remove directory and its contents.

2009-06-10  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/gdb-comm.exp (gdb_comm_add_breakpoint): Handle pending
	breakpoints.

2008-12-03  Ben Elliston  <bje@gnu.org>

	* COPYING: Update to GPL version 3.

2008-04-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/ref.xml, doc/user.xml: Fix typos.
	* doc/dejagnu.texi: Regenerate.

2008-04-06  Daniel Jacobowitz  <drow@false.org>

	* Makefile.am (RUNTESTDEFAULTFLAGS): Add RUNTEST=$(RUNTEST).
	* Makefile.in: Regenerate.
	* dejagnu.exp (host_execute): Improve regexp matching.
	* testsuite/libdejagnu/unit.cc: C++ fixes.

2008-04-06  Daniel Jacobowitz  <drow@false.org>

	* lib/utils.exp (diff): Open both files as binary.

2008-04-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* dejagnu.h (totals): Correct typos.

2008-04-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/user.xml (Adding a New Tool, Adding a New Target): Fix typos.
	* doc/dejagnu.texi: Regenerate.

2008-02-25  Ben Elliston  <bje@gnu.org>
